<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffffff"
            android:gravity="center_horizontal" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"

                android:layout_gravity="center_vertical"
                android:gravity="right|center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_omuz"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"

                    android:background="@android:color/transparent"
                    android:paddingLeft="0dp"
                    android:paddingTop="1dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:scrollbars="horizontal"
                    android:text="@string/shoulders"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button_arkakol"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:padding="0sp"
                    android:text="@string/tciceps"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button_sirt"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:text="@string/back"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button_kalca"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:padding="0sp"
                    android:text="@string/glutes"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button_arkabacak"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:padding="0sp"
                    android:text="@string/lowerlegs"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button__hepsi"
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/all_kas"
                    android:textSize="12sp" />

            </LinearLayout>
    <LinearLayout
        android:layout_width="0dip"
        android:layout_weight="0.60"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_kaslar"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
           />
    </LinearLayout>
     <LinearLayout
         android:layout_width="0dip"
         android:layout_weight="0.20"
         android:layout_height="wrap_content"
         android:orientation="vertical" >

         <Button
             android:id="@+id/button_gogus1"
             android:layout_width="match_parent"
             android:background="@android:color/transparent"
             android:layout_height="30dp"
             android:layout_marginTop="100dp"
             android:paddingLeft="0dp"
             android:paddingTop="1dp"
             android:paddingRight="0dp"
             android:paddingBottom="0dp"
             android:text="@string/chests"
             android:textSize="12sp" />

         <Button
             android:id="@+id/button_onkol"
             android:layout_width="match_parent"
             android:background="@android:color/transparent"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:paddingLeft="0dp"
             android:paddingTop="1dp"
             android:paddingRight="0dp"
             android:paddingBottom="0dp"
             android:text="@string/biceps"
             android:textSize="12sp" />

         <Button
             android:id="@+id/button_karin"
             android:layout_width="match_parent"
             android:background="@android:color/transparent"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:paddingLeft="0dp"
             android:paddingTop="1dp"
             android:paddingRight="0dp"
             android:paddingBottom="0dp"
             android:text="@string/abs"
             android:textSize="12sp" />

         <Button
             android:id="@+id/button_bilek"
             android:layout_width="match_parent"
             android:background="@android:color/transparent"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:paddingLeft="0dp"
             android:paddingTop="0dp"
             android:paddingRight="0dp"
             android:paddingBottom="0dp"
             android:text="@string/lats"
             android:textSize="12sp" />

         <Button
             android:id="@+id/button_onbacak"
             android:layout_width="match_parent"
             android:background="@android:color/transparent"
             android:layout_height="30dp"
             android:layout_marginTop="15dp"
             android:paddingLeft="0dp"
             android:paddingTop="1dp"
             android:paddingRight="0dp"
             android:paddingBottom="0dp"
             android:text="@string/upperlegs"
             android:textSize="12sp" />

         <Button
             android:id="@+id/button_kalf"
             style="?android:attr/buttonStyleSmall"
             android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:paddingLeft="0dp"
             android:paddingTop="0dp"
             android:paddingRight="0dp"
             android:paddingBottom="0dp"
             android:text="@string/calves"
             android:textSize="12sp" />

     </LinearLayout>

 

        
      </LinearLayout>

