<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-2772878414290299/9036651764"></com.google.android.gms.ads.AdView>

    <ImageView
        android:id="@+id/imageView_kaslar"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:src="@drawable/logoanamenu"
        app:srcCompat="@drawable/logoanamenu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <Button
                    android:id="@+id/button_egzersiz_ekle"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/ios7_dumbell" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/button_egzersiz"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textView_egzersiz_menu_aciklama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/egzersizrehberi" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:padding="10dp"
                android:visibility="visible">

                <Button
                    android:id="@+id/button_routines"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/calendar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView222"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="10dp"
                        android:text="Workouts"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textView_egzersiz_menu_aciklama2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/routineandtrainingprogram" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:visibility="gone">

                <Button
                    android:id="@+id/button_search"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/ios7_search" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TextView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="10dp"
                        android:text="@string/search"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textView_egzersiz_menu_aciklama3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Search Exercises" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:padding="10dp">

                <Button
                    android:id="@+id/button_profile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/ic_account_circle_black_24dp"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="10dp"
                        android:text="Profile"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textView_egzersiz_menu_aciklama5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/profiledetails"
                        tools:ignore="DuplicateIds" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:padding="10dp">

                <Button
                    android:id="@+id/button_hakkinda"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/ios7_info"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="10dp"
                        android:text="@string/button_hakkinda"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/textView_egzersiz_menu_aciklama4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/aboutprogram" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/button_egzersiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:background="@drawable/ios7_dumbell"

            android:visibility="visible" />

        <TextView
            android:id="@+id/textView_egzersizlers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Egzersizs"
            android:textColor="@android:color/black" />
    </LinearLayout>


</LinearLayout>